SubBt/force-app/main/default/objects/Pricing_Request__c/Pricing_Request__c.object-meta.xml
<CustomObject>
    <label>Pricing Request</label>
    <nameField>
        <label>Pricing Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricing Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>