SubBt/force-app/main/default/objects/Pricing_Request__c/fields/Approved_Price__c.field-meta.xml
<CustomField>
    <fullName>Approved_Price__c</fullName>
    <label>Approved Price</label>
    <summarizedField>Pricing_Request_Line__c.Price__c</summarizedField>
    <summaryFilterItems>
        <field>Pricing_Request_Line__c.Status__c</field>
        <operation>equals</operation>
        <value>Accepted</value>
    </summaryFilterItems>
    <summaryForeignKey>Pricing_Request_Line__c.Pricing_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>