SubBt/force-app/main/default/objects/Pricing_Request__c/fields/Date_Pricing_Returned__c.field-meta.xml
<CustomField>
    <fullName>Date_Pricing_Returned__c</fullName>
    <label>Date Pricing Returned</label>
    <type>Date</type>
</CustomField>