SubBt/force-app/main/default/objects/Pricing_Request__c/fields/Date_Pricing_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Date_Pricing_Submitted__c</fullName>
    <label>Date Pricing Submitted</label>
    <type>Date</type>
</CustomField>