SubBt/force-app/main/default/objects/Pricing_Request__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <label>Total Price</label>
    <summarizedField>Pricing_Request_Line__c.Price__c</summarizedField>
    <summaryForeignKey>Pricing_Request_Line__c.Pricing_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>