SubBt/force-app/main/default/objects/Pricing_Request__c/fields/Quoted_By__c.field-meta.xml
<CustomField>
    <fullName>Quoted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quoted By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Pricing Requests</relationshipLabel>
    <relationshipName>Pricing_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>