SubBt/force-app/main/default/objects/Pricing_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pricing Pending</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
                <label>Pricing Request Submitted</label>
            </value>
            <value>
                <fullName>Returned</fullName>
                <label>Pricing Request Returned</label>
            </value>
            <value>
                <fullName>Customer Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>