SubBt/force-app/main/default/objects/Pricing_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Price__c</columns>
    <columns>Information__c</columns>
    <columns>Status__c</columns>
    <columns>Selections_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>